# esp-miner-e2e

./: .gitignore  pyproject.toml  requirements.txt
docker/: .Dockerfile.swo  .Dockerfile.swp  Dockerfile  docker-compose.example.yaml  env.example
esp_miner_e2e/: __init__.py  cli.py  config.py
esp_miner_e2e/device/: __init__.py  bitaxe.py
esp_miner_e2e/interface/: __init__.py  axeapi.py  serial_comm.py  webgui.py
esp_miner_e2e/tests/: __init__.py  base.py  test_ota_upgrade.py  test_sanity.py
esp_miner_e2e/util/: __init__.py  results.py  timing.py
